cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.h

typedef void* context_t;
typedef void* graph_t;
typedef void* tensor_t;
typedef void* node_t;
/************** Library intialization and version checking *******************/

/*!
 * @brief Initialize the tengine, only can be called once.
 *
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int init_tengine(void);
/*!
 * @brief Release the tengine, only can be called once.
 *
 * @return none.
 */
DLLEXPORT void release_tengine(void);
/*!
 * @brief Get the version of the tengine.
 *
 * @return const char * of version string.
 */
DLLEXPORT const char* get_tengine_version(void);
/*!
 * @brief Check the run-time library supports the verson.
 *        app developer should call get_tengine_version() to save the version used
 *        during developping.
 *
 *        
 *        The app knows exactly that it can work on a tengine version, and it can
 *        check run-time tengine library supports that version.
 *
 * @param [in] version: A c string returned by get_tengine_version()
 * @return 1: support, 0: not support.
 */
DLLEXPORT int request_tengine_version(const char* version);
/*************************** graph operate set ********************************/

/*!
 * @brief Create the run-time graph for execution from a saved model.
 *        If model format is NULL, an empty graph handle will be returned.
 *
 * @param [in] context: The context the graph will run inside;
 *                   could be NULL and the graph is created in a private context.
 *
 * @param [in] model_format: The model format type,such as "caffe","tengine"
 * @param [in] file_name:  The name of model file.
 *
 * @return  The graph handler or NULL if failed.
 */

DLLEXPORT graph_t create_graph(context_t context, const char* model_format, const char* file_name, ...);
/*!
 * @brief Set the layout type of the graph
 *        the default layout of graph is NCHW
 * @param [in] graph, the graph handle
 * @param [in] layout_type, the layout type NCHW or NHWC
 *
 * @return 0 success, or -1 fail
 */

DLLEXPORT int set_graph_layout(graph_t graph, int layout_type);
/*!
 * @brief designate the input nodes of the graph
 *
 * @param [in] graph: the graph handle
 * @param [in] input_nodes: the node name list of input nodes
 * @param [in] input_number: the number of input_nodes
 *
 * @note  if using the default input nodes of a graph, this call can be skipped
 */
DLLEXPORT int set_graph_input_node(graph_t graph, const char* input_nodes[], int input_number);
/*!
 * @brief designate the output nodes of the graph
 *
 * @param [in] graph: the graph handle
 * @param [in] output_nodes: the node name list of output nodes
 * @param [in] output_number: the number of output_nodes
 *
 * @note  if using the default output nodes of a graph, this call can be skipped
 */

DLLEXPORT int set_graph_output_node(graph_t graph, const char* output_nodes[], int output_number);
/*!
 * @brief Destory the runtime graph and release allocated resource.
 *
 * @param [in] graph: The graph handle.
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int destroy_graph(graph_t graph);
/*!
 * @brief Get the number of input node of the graph.
 *
 *  @param [in] graph The graph handle.
 *  @return <0 Fail, >0 the input node number.
 */
DLLEXPORT int get_graph_input_node_number(graph_t graph);
/*!
 * @brief Get the node handle of #idx of input node of the graph.
 *
 * @param [in] graph The graph handle.
 * @param [in] idx The input node index,starting from zero.
 *
 * @return The node name or NULL on error.
 */
DLLEXPORT node_t get_graph_input_node(graph_t graph, int idx);
/*!
 * @brief Get the number of output node of the graph.
 *
 *  @param [in] graph The graph handle.
 *
 *  @return <0 error, >0 the input node number.
 */
DLLEXPORT int get_graph_output_node_number(graph_t graph);
/*!
 * @brief Get the node handle #idx of a graph output node.
 *
 * @param [in] graph The graph handle.
 * @param [in] idx The input node index, starting from zero.
 *
 * @return The node name or NULL on error.
 */
DLLEXPORT node_t get_graph_output_node(graph_t graph, int idx);
/*!
 * @brief Get a tensor handle of a graph output node.
 *
 * @param [in] graph: The graph handle.
 * @param [in] output_node_idx: The output node index.
 * @param [in] tensor_idx: The output tensor index of the output node.
 *
 * @return The tensor handle or NULL on error.
 *
 */
DLLEXPORT tensor_t get_graph_output_tensor(graph_t graph, int output_node_idx, int tensor_idx);
/*!
 * @brief Get tensor handle of one graph input tensor.
 *
 * @param [in] graph: The graph handle.
 * @param [in] input_node_idx: The input node index, starting from zero.
 * @param [in] tensor_idx: The output tensor index of the input node, starting from zero.
 *
 * @return The tensor handle or NULL on error.
 */
DLLEXPORT tensor_t get_graph_input_tensor(graph_t graph, int input_node_idx, int tensor_idx);
/******************* node operate set ****************************/
/*!
 * @brief Create a node for the graph.
 *
 * @param [in] graph: The graph handle.
 * @param [in] node_name: The name of the node.
 * @param [in] op_name: The name of the operate.
 *
 * @return The node handle or NULL on error.
 */
DLLEXPORT node_t create_graph_node(graph_t graph, const char* node_name, const char* op_name);
/*!
 * @brief  Get the node handle of the graph.
 *
 * @param [in] graph: The graph handle.
 * @param [in] node_name: The name of the node.
 *
 * @return The node handle or NULL on error.
 */
DLLEXPORT node_t get_graph_node(graph_t graph, const char* node_name);
/*!
 * @brief  Get the node handle of the graph.
 *
 * @param [in] graph: The graph handle.
 * @param [in] idx: The index of the node.
 *
 * @return The node handle or NULL on error.
 */
DLLEXPORT node_t get_graph_node_by_idx(graph_t graph, int idx);
/*!
 * @brief  Get the node handle of the graph.
 *
 * @param [in] graph: The graph handle.
 *
 * @return The quantities of all nodes.
 */
DLLEXPORT int get_graph_node_num(graph_t graph);
/*!
 * @brief Get the node name.
 *
 * @param [in] node: The node handle.
 *
 * @return The node name, NULL on error.
 */
DLLEXPORT const char* get_node_name(node_t node);
/*!
 * @brief Get the node op.
 *
 * @param [in] node: The node handle.
 *
 * @return The op name, NULL on error.
 */
DLLEXPORT const char* get_node_op(node_t node);
/*!
 * @brief  Release the node handle.
 *
 * @param  [in] node: The node handle.
 *
 * @return None.
 */
DLLEXPORT void release_graph_node(node_t node);
/*!
 * @brief Get the input tensor handle of a node.
 *
 * @param [in] graph: The graph handle.
 * @param [in] node_name: The node name.
 * @param [in] input_idx: The index of the input tensor.
 * @return The tensor name or NULL on error.
 *
 */
DLLEXPORT tensor_t get_node_input_tensor(node_t node, int input_idx);
/*!
 * @brief Get the output tensor handle of a node.
 *
 * @param [in] node: The node handle.
 * @param [in] output_idx: The index of the output tensor.
 *
 * @return The tensor handle or NULL on error.
 *
 */
DLLEXPORT tensor_t get_node_output_tensor(node_t node, int output_idx);
/*!
 * @brief Set a node's the #idx input tensor.
 *
 * @param [in] graph: The graph handle.
 * @param [in] input_idx: The index of the input tensor.
 * @param [in] tesnor: The tensor handle.
 *
 * @return 0 on success or -1 on error.
 *
 */
DLLEXPORT int set_node_input_tensor(node_t node, int input_idx, tensor_t tensor);
/*!
 * @brief Set a node's the #idx output tensor.
 *
 * @param [in] graph: The graph handle.
 * @param [in] output_idx: The index of the output tensor.
 * @param [in] tensor: The tensor handle.
 * @param [in] tensor_type: The tensor type: VAR/CONST/INPUT/DEP
 *
 *  @return 0 on success or -1 on error.
 *
 */
DLLEXPORT int set_node_output_tensor(node_t node, int output_idx, tensor_t tensor, int tensor_type);
/*!
 * @brief Get the output tensor number of a node.
 *
 * @param [in] graph: The graph handle.
 * @param [in] node: The node hanle.
 *
 * @return >=1 the number of output tensor,
 *         -1 on error.
 *
 */
DLLEXPORT int get_node_output_number(node_t node);
/*!
 * @brief Get the input tensor number of a node.
 *
 * @param [in] graph: The graph handle.
 * @param [in] node: The node hanle.
 *
 * @return >=1 the number of output tensor,
 *         -1 on error.
 *
 */
DLLEXPORT int get_node_input_number(node_t node);