cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.rs

extern "C" {
    #[doc = " @brief Initialize the tengine, only can be called once."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn init_tengine() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Release the tengine, only can be called once."]
    #[doc = ""]
    #[doc = " @return none."]
    pub fn release_tengine();
}
extern "C" {
    #[doc = " @brief Get the version of the tengine."]
    #[doc = ""]
    #[doc = " @return const char * of version string."]
    pub fn get_tengine_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Check the run-time library supports the verson."]
    #[doc = "        app developer should call get_tengine_version() to save the version used"]
    #[doc = "        during developping."]
    #[doc = ""]
    #[doc = ""]
    #[doc = "        The app knows exactly that it can work on a tengine version, and it can"]
    #[doc = "        check run-time tengine library supports that version."]
    #[doc = ""]
    #[doc = " @param [in] version: A c string returned by get_tengine_version()"]
    #[doc = " @return 1: support, 0: not support."]
    pub fn request_tengine_version(version: *const ::std::os::raw::c_char)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Create the run-time graph for execution from a saved model."]
    #[doc = "        If model format is NULL, an empty graph handle will be returned."]
    #[doc = ""]
    #[doc = " @param [in] context: The context the graph will run inside;"]
    #[doc = "                   could be NULL and the graph is created in a private context."]
    #[doc = ""]
    #[doc = " @param [in] model_format: The model format type,such as \"caffe\",\"tengine\""]
    #[doc = " @param [in] file_name:  The name of model file."]
    #[doc = ""]
    #[doc = " @return  The graph handler or NULL if failed."]
    pub fn create_graph(
        context: context_t,
        model_format: *const ::std::os::raw::c_char,
        file_name: *const ::std::os::raw::c_char,
        ...
    ) -> graph_t;
}
extern "C" {
    #[doc = " @brief Set the layout type of the graph"]
    #[doc = "        the default layout of graph is NCHW"]
    #[doc = " @param [in] graph, the graph handle"]
    #[doc = " @param [in] layout_type, the layout type NCHW or NHWC"]
    #[doc = ""]
    #[doc = " @return 0 success, or -1 fail"]
    pub fn set_graph_layout(
        graph: graph_t,
        layout_type: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief designate the input nodes of the graph"]
    #[doc = ""]
    #[doc = " @param [in] graph: the graph handle"]
    #[doc = " @param [in] input_nodes: the node name list of input nodes"]
    #[doc = " @param [in] input_number: the number of input_nodes"]
    #[doc = ""]
    #[doc = " @note  if using the default input nodes of a graph, this call can be skipped"]
    pub fn set_graph_input_node(
        graph: graph_t,
        input_nodes: *mut *const ::std::os::raw::c_char,
        input_number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief designate the output nodes of the graph"]
    #[doc = ""]
    #[doc = " @param [in] graph: the graph handle"]
    #[doc = " @param [in] output_nodes: the node name list of output nodes"]
    #[doc = " @param [in] output_number: the number of output_nodes"]
    #[doc = ""]
    #[doc = " @note  if using the default output nodes of a graph, this call can be skipped"]
    pub fn set_graph_output_node(
        graph: graph_t,
        output_nodes: *mut *const ::std::os::raw::c_char,
        output_number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Destory the runtime graph and release allocated resource."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn destroy_graph(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of input node of the graph."]
    #[doc = ""]
    #[doc = "  @param [in] graph The graph handle."]
    #[doc = "  @return <0 Fail, >0 the input node number."]
    pub fn get_graph_input_node_number(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the node handle of #idx of input node of the graph."]
    #[doc = ""]
    #[doc = " @param [in] graph The graph handle."]
    #[doc = " @param [in] idx The input node index,starting from zero."]
    #[doc = ""]
    #[doc = " @return The node name or NULL on error."]
    pub fn get_graph_input_node(graph: graph_t, idx: ::std::os::raw::c_int) -> node_t;
}
extern "C" {
    #[doc = " @brief Get the number of output node of the graph."]
    #[doc = ""]
    #[doc = "  @param [in] graph The graph handle."]
    #[doc = ""]
    #[doc = "  @return <0 error, >0 the input node number."]
    pub fn get_graph_output_node_number(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the node handle #idx of a graph output node."]
    #[doc = ""]
    #[doc = " @param [in] graph The graph handle."]
    #[doc = " @param [in] idx The input node index, starting from zero."]
    #[doc = ""]
    #[doc = " @return The node name or NULL on error."]
    pub fn get_graph_output_node(graph: graph_t, idx: ::std::os::raw::c_int) -> node_t;
}
extern "C" {
    #[doc = " @brief Get a tensor handle of a graph output node."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] output_node_idx: The output node index."]
    #[doc = " @param [in] tensor_idx: The output tensor index of the output node."]
    #[doc = ""]
    #[doc = " @return The tensor handle or NULL on error."]
    #[doc = ""]
    pub fn get_graph_output_tensor(
        graph: graph_t,
        output_node_idx: ::std::os::raw::c_int,
        tensor_idx: ::std::os::raw::c_int,
    ) -> tensor_t;
}
extern "C" {
    #[doc = " @brief Get tensor handle of one graph input tensor."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] input_node_idx: The input node index, starting from zero."]
    #[doc = " @param [in] tensor_idx: The output tensor index of the input node, starting from zero."]
    #[doc = ""]
    #[doc = " @return The tensor handle or NULL on error."]
    pub fn get_graph_input_tensor(
        graph: graph_t,
        input_node_idx: ::std::os::raw::c_int,
        tensor_idx: ::std::os::raw::c_int,
    ) -> tensor_t;
}
extern "C" {
    #[doc = " node operate set ****************************/"]
    #[doc = " @brief Create a node for the graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] node_name: The name of the node."]
    #[doc = " @param [in] op_name: The name of the operate."]
    #[doc = ""]
    #[doc = " @return The node handle or NULL on error."]
    pub fn create_graph_node(
        graph: graph_t,
        node_name: *const ::std::os::raw::c_char,
        op_name: *const ::std::os::raw::c_char,
    ) -> node_t;
}
extern "C" {
    #[doc = " @brief  Get the node handle of the graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] node_name: The name of the node."]
    #[doc = ""]
    #[doc = " @return The node handle or NULL on error."]
    pub fn get_graph_node(graph: graph_t, node_name: *const ::std::os::raw::c_char) -> node_t;
}
extern "C" {
    #[doc = " @brief  Get the node handle of the graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] idx: The index of the node."]
    #[doc = ""]
    #[doc = " @return The node handle or NULL on error."]
    pub fn get_graph_node_by_idx(graph: graph_t, idx: ::std::os::raw::c_int) -> node_t;
}
extern "C" {
    #[doc = " @brief  Get the node handle of the graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = ""]
    #[doc = " @return The quantities of all nodes."]
    pub fn get_graph_node_num(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the node name."]
    #[doc = ""]
    #[doc = " @param [in] node: The node handle."]
    #[doc = ""]
    #[doc = " @return The node name, NULL on error."]
    pub fn get_node_name(node: node_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Get the node op."]
    #[doc = ""]
    #[doc = " @param [in] node: The node handle."]
    #[doc = ""]
    #[doc = " @return The op name, NULL on error."]
    pub fn get_node_op(node: node_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief  Release the node handle."]
    #[doc = ""]
    #[doc = " @param  [in] node: The node handle."]
    #[doc = ""]
    #[doc = " @return None."]
    pub fn release_graph_node(node: node_t);
}
extern "C" {
    #[doc = " @brief Get the input tensor handle of a node."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] node_name: The node name."]
    #[doc = " @param [in] input_idx: The index of the input tensor."]
    #[doc = " @return The tensor name or NULL on error."]
    #[doc = ""]
    pub fn get_node_input_tensor(node: node_t, input_idx: ::std::os::raw::c_int) -> tensor_t;
}
extern "C" {
    #[doc = " @brief Get the output tensor handle of a node."]
    #[doc = ""]
    #[doc = " @param [in] node: The node handle."]
    #[doc = " @param [in] output_idx: The index of the output tensor."]
    #[doc = ""]
    #[doc = " @return The tensor handle or NULL on error."]
    #[doc = ""]
    pub fn get_node_output_tensor(node: node_t, output_idx: ::std::os::raw::c_int) -> tensor_t;
}
extern "C" {
    #[doc = " @brief Set a node's the #idx input tensor."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] input_idx: The index of the input tensor."]
    #[doc = " @param [in] tesnor: The tensor handle."]
    #[doc = ""]
    #[doc = " @return 0 on success or -1 on error."]
    #[doc = ""]
    pub fn set_node_input_tensor(
        node: node_t,
        input_idx: ::std::os::raw::c_int,
        tensor: tensor_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set a node's the #idx output tensor."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] output_idx: The index of the output tensor."]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] tensor_type: The tensor type: VAR/CONST/INPUT/DEP"]
    #[doc = ""]
    #[doc = "  @return 0 on success or -1 on error."]
    #[doc = ""]
    pub fn set_node_output_tensor(
        node: node_t,
        output_idx: ::std::os::raw::c_int,
        tensor: tensor_t,
        tensor_type: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the output tensor number of a node."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] node: The node hanle."]
    #[doc = ""]
    #[doc = " @return >=1 the number of output tensor,"]
    #[doc = "         -1 on error."]
    #[doc = ""]
    pub fn get_node_output_number(node: node_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the input tensor number of a node."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] node: The node hanle."]
    #[doc = ""]
    #[doc = " @return >=1 the number of output tensor,"]
    #[doc = "         -1 on error."]
    #[doc = ""]
    pub fn get_node_input_number(node: node_t) -> ::std::os::raw::c_int;
}
